--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "3.2.0",
     "react-tilt": "^0.1.4",
     "bootstrap": "^4.2.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "axios": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
