--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -9,7 +9,8 @@
     "react-tilt": "^0.1.4",
     "bootstrap": "^4.2.1",
     "uuid": "^3.3.3",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "js-cookie": "2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://backend-service:5000",
   "browserslist": {
     "production": [
       ">0.2%",
