--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "cors": "2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
