fix to issue with dependencies

--- a/frontend-web/Dockerfile
+++ b/frontend-web/Dockerfile
@@ -1,15 +1,19 @@
 FROM node:12.2.0-alpine
 
+# Create app directory in container
+RUN mkdir -p /install/client
+WORKDIR /install/client
+
+# Install dependencies
+COPY package.json /install/client
+COPY package-lock.json /install/client
+RUN npm install
+RUN npm install -g nodemon
+
+ENV NODE_PATH=/install/client/node_modules
+
 RUN mkdir -p /srv/app/client
 WORKDIR /srv/app/client
-
-# ENV PATH /app/node_modules/.bin:$PATH
-
-COPY package.json /srv/app/client
-COPY package-lock.json /srv/app/client
-
-RUN npm install
-
 COPY . /srv/app/client
 
 EXPOSE 3000
