--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/krabinowitz1/over-my-dead-body-server#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
-    "jsonwebtoken": "^8.5.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
