--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "nodemon": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^3.3.3",
-    "cors": "2.8.5",
-    "path": "0.12.7"
+    "cors": "2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
