--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./unitTestLauncher.js",
     "start": "node ./server.js",
     "dev": "nodemon ./server.js"
   },
@@ -25,9 +25,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
+    "request": "^2.88.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "jasmine": "^3.5.0",
+    "jasmine-node": "^3.0.0",
     "nodemon": "^2.0.1"
   }
 }
