--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
-    "uuid": "^3.3.3",
-    "cors": "2.8.5",
-    "path": "0.12.7"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
