--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
     "request": "^2.88.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "cors": "2.8.5"
   },
   "devDependencies": {
     "jasmine": "^3.5.0",
