--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.2.1",
+    "js-cookie": "2.2.1",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-tilt": "^0.1.4",
-    "bootstrap": "^4.2.1",
-    "uuid": "^3.3.3",
-    "axios": "^0.19.0",
-    "js-cookie": "2.2.1"
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
