--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "cookie-parser": "^1.4.4",
+    "cors": "2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
+    "path": "0.12.7",
+    "react-moment": "^0.9.6",
     "request": "^2.88.0",
-    "uuid": "^3.3.3",
-    "cors": "2.8.5",
-    "path": "0.12.7"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "jasmine": "^3.5.0",
