--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^4.2.1",
     "uuid": "^3.3.3",
     "axios": "^0.19.0",
-    "js-cookie": "2.2.1"
+    "js-cookie": "2.2.1",
+    "moment": "2.24.0",
+    "moment-timezone":"0.5.27"
   },
   "scripts": {
     "start": "react-scripts start",
